Final E3: Implementado Strategy Pattern para impresión, formato de fechas y validación de cierre en tickets de empresa